# claude-plugins

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
plugins/alignment-mode/: README.md
plugins/alignment-mode/.claude-plugin/: plugin.json
plugins/alignment-mode/hooks/: hooks.json
plugins/alignment-mode/scripts/: align.py
plugins/alignment-mode/skills/align/: SKILL.md
plugins/alignment-mode/skills/lgtm/: SKILL.md
plugins/master-programmer/: README.md
plugins/master-programmer/.claude-plugin/: plugin.json
plugins/master-programmer/agents/: guru.md
plugins/master-programmer/assets/: compress-gif.sh  demo.sh  demo.tape
plugins/plan+mode/: README.md
plugins/plan+mode/.claude-plugin/: plugin.json
plugins/plan+mode/hooks/: hooks.json
plugins/plan+mode/skills/plan+/: SKILL.md
plugins/plan+mode/skills/plan+approve/: SKILL.md
plugins/plan-mode/: README.md
plugins/plan-mode/.claude-plugin/: plugin.json
plugins/plan-mode/hooks/: hooks.json
plugins/plan-mode/skills/plan+/: SKILL.md
plugins/statusline/: README.md
plugins/statusline/.claude-plugin/: plugin.json
plugins/statusline/hooks/: hooks.json
python/plan/: __init__.py
python/statusline/: __init__.py  __main__.py  config.py  db.py  defaults.toml  errors.py  events_logger.py  input.py  providers.py  renderer.py  style.py  templates.py
python/statusline/modules/: __init__.py  bar.py  context.py  context_bar.py  cost.py  event_renderables.py  events.py  git.py  model.py  version.py  workspace.py
python/statusline/renderables/: __init__.py  truncate_left.py
statusline/: pyproject.toml
tests/: conftest.py  test_cli.py  test_config.py  test_event_renderables.py  test_events.py  test_events_logger.py  test_modules.py  test_plan.py  test_renderer.py  test_statusline.py  test_style.py  test_templates.py  test_truncate_left.py
tests/plugins/alignment_mode/: test_align.py
(+11 files in other folders)
