[project]
name = "claude-plugins"
version = "0.1.0"
description = "Python package for NiltonVolpato/claude-plugins"
readme = "README.md"
authors = [
    { name = "Nilton Volpato", email = "nilton@volpa.to" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.0",
    "pydantic>=2.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/NiltonVolpato/claude-plugins/"
Repository = "https://github.com/NiltonVolpato/claude-plugins.git"

[project.scripts]
statusline = "statusline:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "statusline"
module-root = "python"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
